# crypto23

./: .covdbg.yaml  .gitignore  CMakeLists.txt  LICENSE  README.md
.github/workflows/: cmake-big-endian-s390x.yml  cmake-multi-platform.yml
cmake/: crypto23Config.cmake.in
include/crypto23/: rijndael.h
tests/: CMakeLists.txt  aes_128_tests.cpp  aes_192_tests.cpp  aes_256_tests.cpp  main.cpp
